fix res on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -38,7 +38,7 @@
 /* Tablet */
 @media (max-width: 1023px) {
   #header {
-    min-height: 80vh;
+    min-height: 55vh;
   }
   .nav__container {
     width: 90%;
@@ -59,6 +59,10 @@
   .banner-container {
     margin: 50px auto;
   }
+  /* Main */
+  .main {
+    padding-top: 3rem;
+  }
   /* Inspiration */
   .inspiration {
     flex-direction: column-reverse;
@@ -69,29 +73,59 @@
   }
   .inspiration__content h1 {
     font-size: 28px;
+    margin-top: 0.5rem;
   }
   .inspiration__content span {
     justify-content: center;
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .inspiration__content p {
     font-size: 12px;
+    margin-top: 0.5rem;
+    padding: 0;
   }
   .inspiration__images {
     width: 65%;
   }
+  .inspiration__checklist {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Căn cả khối vào giữa */
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  .inspiration__checklist-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: left;
+    max-width: 300px;
+    width: 100%;
+    margin-top: 5px;
+  }
+
+  .inspiration__checklist-item svg {
+    margin-right: 8px;
+    flex-shrink: 0;
+  }
   /* Mission */
   .mission {
-    margin-top: 100px;
+    margin-top: 3rem;
   }
   .mission__content h1 {
     font-size: 28px;
+    margin-bottom: 0.5rem;
   }
   .mission__content p {
     font-size: 12px;
   }
   .mission__content span {
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .mission__item:not(:last-child)::after {
     display: none;
@@ -121,6 +155,8 @@
     text-align: center;
     font-size: 12px;
     margin-top: 5px;
+    line-height: 1;
+    margin-bottom: 0.5rem;
   }
   .vision__content h1 {
     font-size: 24px;
@@ -128,6 +164,8 @@
   .vision__content span {
     justify-content: center;
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .vision__video img {
     min-width: 80%;
@@ -136,9 +174,12 @@
   /* Offer */
   .offer__title span {
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .offer__title h1 {
     font-size: 24px;
+    margin-bottom: 0.5rem;
   }
   .offer__title p {
     font-size: 12px;
@@ -165,6 +206,7 @@
 
   .product__title {
     text-align: center;
+    height: 35vh;
   }
   .product__title h1 {
     width: 100%;
@@ -173,16 +215,21 @@
   .product__title span {
     width: 100%;
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .product__title p {
     width: 100%;
     font-size: 12px;
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
   }
 
   .product__title button {
     justify-content: center;
   }
-  .prodcut__items {
+  .product__items {
+    margin-top: -0.5rem;
     max-width: 100%;
     height: 300px;
   }
@@ -196,12 +243,24 @@
   }
   .testi__title span {
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .testi-card {
     margin: 10px;
   }
 
   /* Freshproduct */
+  .freshproduct span {
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
+  }
+  .fresh__container {
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 1rem;
+  }
   .right-box > span {
     font-size: 20px;
   }
@@ -251,13 +310,16 @@
   }
   /* Discover */
   .discover {
-    margin-top: 80px;
+    margin-top: 4rem;
+    height: 400px;
   }
   .discover__content h1 {
     font-size: 24px;
   }
   .discover__content p {
     font-size: 12px;
+    line-height: 1;
+    margin: 1rem auto;
   }
   .discover__content button a {
     font-size: 18px;
@@ -266,17 +328,26 @@
     width: 90%;
   }
   /* Blog */
+  .blog {
+    padding-top: 1rem;
+  }
+  .blog__title {
+    padding: 0;
+  }
   .blog__cards {
     grid-template-columns: repeat(1, 1fr);
   }
   .blog__title span {
     font-size: 20px;
+    padding-top: 0;
   }
   .blog__title h1 {
     font-size: 24px;
+    margin-bottom: 0;
   }
   .blog__title p {
     font-size: 12px;
+    margin-top: 0.5rem;
   }
 
   /* Contact */
@@ -287,9 +358,12 @@
   }
   .contactus__title span {
     font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .contactus__title h1 {
     font-size: 24px;
+    margin-bottom: 0;
   }
   .contactus__left p {
     font-size: 12px;
@@ -498,10 +572,12 @@
     text-align: center;
     font-size: 12px;
     line-height: 1.5;
-    margin: 0.5rem;
+    margin: 1rem;
   }
   .vision__content h1 {
+    margin-top: 1rem;
     font-size: 24px;
+    line-height: 1;
   }
   .vision__content span {
     justify-content: center;
@@ -564,6 +640,7 @@
   .product__title h1 {
     width: 100%;
     font-size: 24px;
+    margin: 0;
   }
   .product__title span {
     width: 100%;
@@ -628,6 +705,11 @@
   .freshproduct {
     margin-top: -1rem;
     padding: 1rem;
+  }
+  .freshproduct span {
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0.5px;
   }
   .fresh__container {
     align-items: center;
@@ -720,6 +802,9 @@
     align-items: center;
     gap: 0;
   }
+  .contactus__title {
+    padding: 0;
+  }
   .contactus__title span {
     font-size: 20px;
     line-height: 1;
@@ -733,6 +818,7 @@
   .contactus__left p {
     font-size: 12px;
     text-align: center;
+    margin: 0.5rem;
   }
   .contactus__right {
     margin: 10px;
